SubVersion: $Id$

Log:

- 24/08/2007, version 1.0.8: roms
	- removed TiglUsb driver support due to license issues. 
		Replaced by libusb-win32 GPL'ed driver.

- 06/08/2007, version 1.0.7: roms
	- removed PortTalk I/O driver due to license issues. Replaced by GPL'ed
		MPlayer's DhaHelper driver.
	- fixed build with upcoming glibc 2.7 (kevin)

- 19/05/2007, version 1.0.6: roms
	- changed PID_TI84P to 0xE003 and added PID_TI84P_SE as 0xE008.
	This has been done in 1.0.2 but not propagated under Linux.
	- fixed bug #1707555: grammar correction in error message.
	
- 02/04/2007, version 1.0.5: roms
	- support NetBSD serial port device names (Jukka Salmi)
	- cosmetic change in the name of the TiEmu virtual link
	- fixed bug #1676861: VTi link failed due to library name (major)
	- fixed missing 'break's in error management code
	- better mounting check of /proc/bus/usb

- 23/02/2007, version 1.0.4: roms
	- enabled i18n

- 19/10/2006, version 1.0.3: roms
	- fixed build when linux/ticables.h is not available (kevin)
	- 64-bit driver is v3.5, 32-bit one is v3.6: request v3.5
	- fixed pause in Linux support: usleep uses us rather than ms.

- 11/10/2006, version 1.0.2: roms
	- re-added USB kernel module support (testing purposes)
	- synced BSD serial linking code with Linux code (tijl)
	- BSD libusb fixes (tijl)
	- changed PID_TI84P to 0xE003 and added PID_TI84P_SE as 0xE008
	- added probing of TI84+ non-SE
	- probe_usb_devices: returns an empty array rather than garbage when function fails
	- be a little more verbose about nodes permissions and compiled options
	        (I received many mails which lacks those information)
	
- 21/02/2006, version 1.0.1: roms
	- detect i[3456]86-apple-darwin* (Intel Macs) and x86_64-apple-darwin* (probably coming soon)
	  as __MACOSX__ (kevin)
	- updated OS X and BSD ports to compile again (kevin)
	- changed TIEXPORT into TIEXPORT1
	- fixed BSD TTY device names in Gray/BlackLink support (Sean McLaughlin)
	