@@ -268,7 +268,7 @@ static int check_for_node_usability(const char *pathname)
     return 0;
 }
 
-int check_for_root(void)
+int bsd_check_root(void)
 {
     uid_t uid = getuid();
 
@@ -278,7 +278,7 @@ int check_for_root(void)
     return (uid ? ERR_ROOT : 0);
 }
 
-int check_for_tty(const char *devname)
+int bsd_check_tty(const char *devname)
 {
     ticables_info(_("Check for tty usability:"));
     if(check_for_node_usability(devname) == -1)
@@ -287,12 +287,12 @@ int check_for_tty(const char *devname)
     return 0;
 }
 
-int check_for_parport(const char *devname)
+int bsd_check_parport(const char *devname)
 {
     return ERR_PPDEV;
 }
 
-int check_for_libusb(void)
+int bsd_check_libusb(void)
 {
     return 0;
 }
