@@ -24,9 +24,9 @@
 
 #include <stdio.h>
 
-int check_for_root(void);
-int check_for_tty(const char *devname);
-int check_for_parport(const char *devname);
-int check_for_libusb(void);
+int bsd_check_root(void);
+int bsd_check_tty(const char *devname);
+int bsd_check_parport(const char *devname);
+int bsd_check_libusb(void);
 
 #endif
