@@ -44,17 +44,17 @@ static int par_prepare(CableHandle *h)
 	default: return ERR_ILLEGAL_ARG;
 	}
 
-	if(win32_detect_os() == WIN_NT)
+	if(win32_check_os() == WIN_NT)
 	{
-		if(!win32_detect_dha())
+		if(!win32_check_dha())
 		{
 			free(h->device); h->device = NULL;
 			return ERR_DHA_NOT_FOUND;
 		}
 	}
-	else if(win32_detect_os() == WIN_64)
+	else if(win32_check_os() == WIN_64)
 	{
-		if(!win32_detect_rwp())
+		if(!win32_check_rwp())
 		{
 			free(h->device); h->device = NULL;
 			return ERR_DHA_NOT_FOUND;
