@@ -48,17 +48,17 @@ static int ser_prepare(CableHandle *h)
 	}
 
 	// detect OS 
-	if(win32_detect_os() == WIN_NT)
+	if(win32_check_os() == WIN_NT)
 	{
-		if(!win32_detect_dha())
+		if(!win32_check_dha())
 		{
 			free(h->device); h->device = NULL;
 			return ERR_DHA_NOT_FOUND;
 		}
 	}
-	else if(win32_detect_os() == WIN_64)
+	else if(win32_check_os() == WIN_64)
 	{
-		if(!win32_detect_rwp())
+		if(!win32_check_rwp())
 		{
 			free(h->device); h->device = NULL;
 			return ERR_DHA_NOT_FOUND;
